@@ -3,7 +3,7 @@
  * STATUSWRL.C - Nagios 3-D (VRML) Network Status View
  *
  * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   02-15-2003
+ * Last Modified:   06-02-2003
  *
  * Description:
  *
@@ -554,7 +554,7 @@ void calculate_host_coords(void){
 
 		/* none was found, so add a blank one */
 		if(temp_hostextinfo==NULL)
-			add_hostextinfo(temp_host->name,NULL,NULL,NULL,NULL,NULL,0,0,0.0,0.0,0.0,0,0);
+			add_hostextinfo(temp_host->name,NULL,NULL,NULL,NULL,NULL,NULL,0,0,0.0,0.0,0.0,0,0);
 
 		/* default z coord should 0 for auto-layout modes unless overridden later */
 		else
